fluxcd/apps/overlays/production/invoiceninja/deployment-nginx-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoiceninja-nginx
spec:
  template:
    spec:
      containers:
      - name: nginx
        image: docker.jcr.pcfae.com/nginx:alpine
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: app-public
        persistentVolumeClaim:
          claimName: hyrule-castle-invoiceninja-app-public-invoiceninja-app-0
      - name: app-storage
        persistentVolumeClaim:
          claimName: hyrule-castle-invoiceninja-app-storage-invoiceninja-app-0
