fluxcd/apps/overlays/production/invoiceninja/statefulset-mysql-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: invoiceninja-mysql
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/access-class: mariadb
        policy.prplanit.com/service-scope: hyrule-castle.invoiceninja.mariadb
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mysql
          image: docker.io/mysql:8
          command: []
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - $patch: delete
              name: PLACEHOLDER_MYSQL_DATA
            - name: hyrule-castle-invoiceninja-mysql-data
              mountPath: /var/lib/mysql
            - name: mysql-run
              mountPath: /run/mysqld
            - name: mysql-tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: "90m"
              memory: "1Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
      volumes:
        - name: mysql-run
          emptyDir: {}
        - name: mysql-tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: hyrule-castle-invoiceninja-mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 20Gi
