fluxcd/apps/overlays/production/invoiceninja/statefulset-redis-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: invoiceninja-redis
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/access-class: redis
        policy.prplanit.com/service-scope: hyrule-castle.invoiceninja.redis
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: docker.io/redis:alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - $patch: delete
              name: PLACEHOLDER_REDIS_DATA
            - name: hyrule-castle-invoiceninja-redis-data
              mountPath: /data
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
  volumeClaimTemplates:
    - metadata:
        name: hyrule-castle-invoiceninja-redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 5Gi
