fluxcd/apps/overlays/production/invoiceninja/service-invoiceninja-nginx-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoiceninja-nginx
  labels:
    policy.prplanit.com/ingress: "true"
