fluxcd/apps/overlays/production/invoiceninja/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoiceninja-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Business Apps (Hyrule Castle🏰)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "invoice.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: invoiceninja-nginx
          port: 9000
