fluxcd/apps/overlays/production/invoiceninja/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoiceninja-nginx
  namespace: prelude-of-light
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Business Apps (Hyrule Castle🏰)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
  hostnames:
    - "invoiceninja.prplanit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: invoiceninja-nginx
          port: 9000
